yeet everything I don't like.